--- a/ProyectoFinal2/gradle.properties
+++ b/ProyectoFinal2/gradle.properties
@@ -1,5 +1,18 @@
+# gradle.properties
+
+# JVM settings
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+
+# Kotlin settings
 kotlin.code.style=official
 kotlin.version=2.0.0
+
+# Compose settings
 compose.version=1.6.10
+
+# Voyager version
 voyager.version=1.1.0-beta03
+
+# Performance optimizations
+org.gradle.configuration-cache=true
+org.gradle.parallel=true
